--- a/client/index.html
+++ b/client/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" >
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1" >
   <style>
-      @import url("https://fonts.googleapis.com/css?family=Aoboshi+One:400|Crimson+Text:700,400|Inter:400,700|Istok+Web:700");
+      @import url("https://fonts.googleapis.com/css?family=Aoboshi+One:400|Crimson+Text:700,400|Inter:400,700|Istok+Web:700|Poppins:300,400,500,600,700");
     </style></head>
   <body>
     <div id="root"></div>
